# banco-modificado

./: README.md
backend/: db.sqlite3  manage.py  pyproject.toml
backend/backendei/: asgi.py  settings.py  wsgi.py
backend/core/: Serializers.py  admin.py  models.py  views.py
backend/core/migrations/: 0001_initial.py
